[tool.poetry]
name = "project-reader"
version = "0.1.0"
description = ""
authors = ["Kalle Ilves <kalle.ilves@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
tomlkit = "^0.11.6"
tomli = "^2.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.15.5"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
